unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/d_wh__Configurable_OAuth__mdt.object-meta.xml
<CustomObject>
    <label>Configurable OAuth</label>
    <pluralLabel>Configurable OAuth</pluralLabel>
</CustomObject>