unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Callback_Code_Key__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callback_Code_Key__c</fullName>
    <label>Callback Code Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>