unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Callback_State_Key__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callback_State_Key__c</fullName>
    <label>Callback State Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>