unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>