unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>