unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Initiate_URL__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Initiate_URL__c</fullName>
    <label>Initiate URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>