unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Refresh_Token_Body__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Refresh_Token_Body__c</fullName>
    <label>Refresh Token Body</label>
    <type>TextArea</type>
</CustomField>