unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Refresh_Token_Resp_Access_Token_Path__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Refresh_Token_Resp_Access_Token_Path__c</fullName>
    <label>Refresh Token Resp Access Token Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>