unpackaged/main/default/objects/d_wh__Configurable_OAuth__mdt/fields/d_wh__Refresh_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Refresh_Token_URL__c</fullName>
    <label>Refresh Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>